feat: reimplement bigfile, add Chmod cmd, update, cleanup

--- a/.luarc.json
+++ b/.luarc.json
@@ -1,5 +1,5 @@
 {
-  "diagnostics.globals": [],
+  "diagnostics.globals": [ "vim" ],
   "workspace.checkThirdParty": "Disable",
   "diagnostics.disable": [
     "lowercase-global",
