--- a/rocks.toml
+++ b/rocks.toml
@@ -1,21 +1,21 @@
 [rocks]
 
 [plugins]
-# addons
 "rocks.nvim" = "2.44.0"
 "rocks-git.nvim" = "2.5.3"
-# luarocks plugins
 "mini.nvim" = "0.15.0"
 "snacks.nvim" = "2.22.0"
 "heirline.nvim" = "1.0.7"
-"nui.nvim" = "0.3.0"
+"nui.nvim" = "0.4.0"
 "plenary.nvim" = "scm"
 "mason.nvim" = "1.11.0"
 "mason-lspconfig.nvim" = "1.32.0"
-"nvim-lspconfig" = "2.0.0"
-# git plugins
-"blink.cmp" = { git = "saghen/blink.cmp", rev = "v1.1.1" }
+"nvim-lspconfig" = "2.1.0"
 "fold-cycle.nvim" = { git = "jghauser/fold-cycle.nvim", rev = "20e9b468b771ebf33b6806a0e872eee53c5a20c9" }
-"neo-tree.nvim" = { git = "nvim-neo-tree/neo-tree.nvim", rev = "3.31.1" }
 "nvim-treesitter" = { git = "nvim-treesitter/nvim-treesitter", rev = "v0.9.3" }
 "supermaven-nvim" = { git = "supermaven-inc/supermaven-nvim", rev = "07d20fce48a5629686aefb0a7cd4b25e33947d50" }
+"nvim-ufo" = { git = "kevinhwang91/nvim-ufo", rev = "caa217754203de6b3b761c4940c32e1b0a8e54a1" }
+"promise-async" = { git = "kevinhwang91/promise-async", rev = "119e8961014c9bfaf1487bf3c2a393d254f337e2" }
+"conform.nvim" = { git = "stevearc/conform.nvim", rev = "v9.0.0" }
+"blink.cmp" = { git = "saghen/blink.cmp", rev = "v1.2.0" }
+"neo-tree.nvim" = { git = "nvim-neo-tree/neo-tree.nvim", rev = "3.33" }
