--- a/.luarc.json
+++ b/.luarc.json
@@ -1,4 +1,5 @@
 {
+  "$schema": "https://raw.githubusercontent.com/sumneko/vscode-lua/master/setting/schema.json",
   "workspace.library": ["/usr/share/nvim/runtime"],
   "diagnostics": {
     "globals": [
