--- a/rocks.toml
+++ b/rocks.toml
@@ -10,9 +10,8 @@
 "plenary.nvim" = "scm"
 "mason.nvim" = "1.11.0"
 "mason-lspconfig.nvim" = "1.32.0"
-"nvim-lspconfig" = "2.2.0"
+"nvim-lspconfig" = "2.3.0"
 "fold-cycle.nvim" = { git = "jghauser/fold-cycle.nvim", rev = "20e9b468b771ebf33b6806a0e872eee53c5a20c9" }
-"nvim-treesitter" = { git = "nvim-treesitter/nvim-treesitter", rev = "v0.9.3" }
 "supermaven-nvim" = { git = "supermaven-inc/supermaven-nvim", rev = "07d20fce48a5629686aefb0a7cd4b25e33947d50" }
 "nvim-ufo" = { git = "kevinhwang91/nvim-ufo", rev = "caa217754203de6b3b761c4940c32e1b0a8e54a1" }
 "promise-async" = { git = "kevinhwang91/promise-async", rev = "119e8961014c9bfaf1487bf3c2a393d254f337e2" }
@@ -20,3 +19,7 @@
 "neo-tree.nvim" = { git = "nvim-neo-tree/neo-tree.nvim", rev = "3.33" }
 "schemastore.nvim" = { git = "b0o/schemastore.nvim", rev = "df87d16fc4ea7c2c67cfc00b513861738693fe07" }
 "blink.cmp" = { git = "saghen/blink.cmp", rev = "v1.3.1" }
+
+[plugins."nvim-treesitter" ]
+git = "nvim-treesitter/nvim-treesitter"
+rev = "v0.10.0"
